---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added a preference to change the width of the compact dialog
    - Added a context menu action on fuels to edit them
  Changes:
    -
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 2.0.13
Date: 22. 11. 2024
  Bugfixes:
    - Fixed a crash when pasting a module (#417)
    - Fixed a crash when trying to paste a line that uses fuel in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 2.0.12
Date: 20. 11. 2024
  Bugfixes:
    - Fixed a crash when trying to edit a machine that uses fuel (#412)
    - Fixed a crash when entering a negative beacon amount (#415)
    - Fixed a crash when trying to filter a fluid on an inserter
    - Fixed a fuel migration issue, marking it as invalid when it wasn't

---------------------------------------------------------------------------------------------------
Version: 2.0.11
Date: 19. 11. 2024
  Features:
    - Activating a 'Put into cursor' action on any item button while holding an inserter now whitelists that item
  Bugfixes:
    - Fixed various migration and repair issues (spicy!)

---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 17. 11. 2024
  Bugfixes:
    - Fixed that the beacon dialog can't be confirmed (#409)
    - Fixed that hidden planets were still shown (#410)

---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 17. 11. 2024
  Changes:
    - Added a warning message when trying to use a recipe in an incompatible location (#393)
  Bugfixes:
    - Fixed that adding the same module, but of different quality would just drop one of them (#392)