@@ -385,6 +385,8 @@ action_add_recipe_below=Add recipe below
 action_prioritize=Prioritize
 action_pick_up=Pick up
 action_factoriopedia=Open in Factoriopedia
+action_move_left=Move left
+action_move_right=Move right
 
 # Effects tooltip
 effect_line=__1__:__2____3____4____5__
